--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 </div>
 
                 <div class="login-container">
-                    <a href="#" class="login-link">Вход</a>
-                    <img src="img/sign-in.svg" class="login-icon" alt="Sign In">
+                    <a href="#" class="login-link">
+                        Вход
+                        <img src="img/sign-in.svg" class="login-icon" alt="Sign In">
+                    </a>
                 </div>
             </div>
         </header>
@@ -54,7 +56,9 @@
         <footer class="container footer">
             <div class="footer-content">
                 <div class="footer-left">
-                    <img src="img/google.svg" alt="Mail">
+                    <a href="#">
+                        <img src="img/google.svg" alt="G">
+                    </a>
                 </div>
                 <div class="copyright">©Pawly 2025</div>
             </div>
